r79 - juli, 18, 2009
	* install : new module
	* install : index > display list of tests that succeed of failed
	* install : templates > isCacheFolderWritable partial
	* install : templates > isLogFolderWritable partial
	* install : templates > isPhpOpenSSLLoaded partial
	* install : templates > isPhpSmtpLoaded partial
	* install : templates > isMemoryLimitHighEnough partial
	* install : templates > isApacheModRewriteenabled partial
	* install : templates > checkConfigSuccess.php
	* install : actions > new action 'checkConfiguration' has been implemented
	

r78 - july, 18, 2009
	* apps/front/lib/ConfigForm.class.php : default values are set
	* Association : config > save settings
	* layout.php : new menu entry 'preferences' to configure Piwam
	* Association : mailingSuccess.php > cleaned code which displays flash
	* data/updates/1.1.0beta-to-1.1/r78.sql : label for field "edit 
	  association" has been extended to "edit and configure association" 


r77 - july, 13, 2009
	* data/updates : updates.sql > fixed error, operation 'ADD' was used instead
	  of 'CHANGE' for updating 'montant' fields
	* Configurator.class.php : we now can give a 'custom default value' if no
	  custom value has been set in the database
	* MembrePeer.php : use of Configurator instead of YAML class for the number
	  of users to display on each page
	

r76 - june, 9, 2009
    * /apps/front/lib/form/ConfigForm.class.php : new form class
    * ConfigVariablePeer : doSelectByCategorieCode($code) method
    * Association : actions > new executeConfig() action
    * Association : new views "configSuccess.php" and "_configForm.php"


r75 - june, 8, 2009
    * /lib/misc/Configurator.class.php : the aim of this class is to deal with
      configuration variables
    * ConfigVariablePeer : retrieveByCode($code) method
    * ConfigValuePeer : retrieveByCode($code, $association_id) method
    

r74 - june, 8, 2009
    * THANKS : new contributors